# tileson

./: .gitignore  .travis.yml  CHANGELOG.md  CMakeLists.txt  CONTRIBUTION.md  LICENSE  README.md  TilesonConfig.h  TilesonConfig.h.in  main.cpp  run_test.bat  tileson.hpp  tileson_min.hpp  travis.yml
.github/workflows/: ci-linux-clang.yml  ci-linux-gcc.yml  ci-macos-clang.yml  ci-windows-msvc.yml  test_verification.yml
content/: demo-background.aseprite  demo-tileset-2.aseprite  demo-tileset.aseprite  margin-space-tileset.aseprite
content/memory/: f2src  files.h  files_mapper.h  tson_files.h  tson_files_mapper.h  ultimate_test.json  ultimate_test.lzma  ultimate_test_min.json
content/test-maps/: demo-tileset.json  feature_111_demo_map.json  infinite.json  infinite.tmx  infinite_test.json  margin-space-map.json  margin-space-map.lzma  objecttypes.json  objecttypes.xml  propertytypes.json  simple_map.json  simple_map.tmx  template1.json  template2.json  template3.json  tiled_version_1.6.json  tileset_properties.json  ultimate_test.json  ultimate_test.json.lzma  ultimate_test.tmx  ultimate_test_base64.json  ultimate_test_base64.json.lzma  ultimate_test_min.json.lzma  ultimate_test_reduced.json  ultimate_test_v1.5.json  ultimate_test_v1.5.tmj  ultimate_test_v1.9.json  useless_template_object.tx  wang.tmx  withtemplates.json
content/test-maps/issues/: Preluda3.json  issue_100.json  issue_110.json  issue_113.json  issue_17.json  issue_46.json  issue_46_map.json
content/test-maps/project-v1.10/: test.tiled-project
content/travis_examples/: travis_example_matrix.yml  travis_example_osx.yml
doc/: Doxyfile
doc/html/: #ffaa07ff-example.html  Base64Decompressor_8hpp.html  Base64Decompressor_8hpp_source.html  Base64_8hpp.html  Base64_8hpp_source.html  Chunk_8cpp.html  Chunk_8h.html  Chunk_8h_source.html  Chunk_8hpp.html  Chunk_8hpp_source.html  Color_8cpp.html  Color_8h.html  Color_8h_source.html  Color_8hpp.html  Color_8hpp_source.html  DecompressorContainer_8hpp.html  DecompressorContainer_8hpp_source.html  EnumBitflags_8hpp.html  EnumBitflags_8hpp_source.html  Enums_8hpp.html  Enums_8hpp_source.html  FlaggedTile_8hpp.html  FlaggedTile_8hpp_source.html  Frame_8cpp.html  Frame_8h.html  Frame_8h_source.html  Frame_8hpp.html  Frame_8hpp_source.html  Grid_8cpp.html  Grid_8h.html  Grid_8h_source.html  Grid_8hpp.html  Grid_8hpp_source.html  IDecompressor_8hpp.html  IDecompressor_8hpp_source.html  Layer_8cpp.html  Layer_8h.html  Layer_8h_source.html  Layer_8hpp.html  Layer_8hpp_source.html  (+464 more)
doc/html/search/: all_0.js  (+173 more)
docs/: Doxyfile  index.md  index_old.md
docs/html/: Animation_8hpp.html  Animation_8hpp_source.html  Base64Decompressor_8hpp.html  Base64Decompressor_8hpp_source.html  Base64_8hpp.html  Base64_8hpp_source.html  Chunk_8hpp.html  Chunk_8hpp_source.html  Color_8hpp.html  Color_8hpp_source.html  DecompressorContainer_8hpp.html  DecompressorContainer_8hpp_source.html  EnumBitflags_8hpp.html  EnumBitflags_8hpp_source.html  Enums_8hpp.html  Enums_8hpp_source.html  FlaggedTile_8hpp.html  FlaggedTile_8hpp_source.html  Frame_8hpp.html  Frame_8hpp_source.html  Gason_8hpp.html  Gason_8hpp_source.html  Grid_8hpp.html  Grid_8hpp_source.html  IDecompressor_8hpp.html  IDecompressor_8hpp_source.html  IJson_8hpp.html  IJson_8hpp_source.html  Json11_8hpp.html  Json11_8hpp_source.html  Layer_8hpp.html  Layer_8hpp_source.html  Lzma_8hpp.html  Lzma_8hpp_source.html  Map_8hpp.html  Map_8hpp_source.html  MemoryBuffer_8hpp.html  MemoryBuffer_8hpp_source.html  MemoryStream_8hpp.html  MemoryStream_8hpp_source.html  (+445 more)
examples/: CMakeLists.txt
examples/sfml/: CMakeLists.txt  SfmlDemoManager.cpp  SfmlDemoManager.h  main.cpp  vera_font.h
external_libs/: catch.hpp
extras/: picojson.hpp  pocketlzma.hpp
include/: tileson.h  tileson.hpp  tileson_min.h  tileson_parser.hpp
include/common/: Base64.hpp  Base64Decompressor.hpp  DecompressorContainer.hpp  EnumBitflags.hpp  Enums.hpp  IDecompressor.h  IDecompressor.hpp  Lzma.hpp  NlohmannJson.hpp  Tools.hpp  tileson_forward.hpp
include/interfaces/: IDecompressor.hpp  IJson.hpp
include/json/: Gason.hpp  Json11.hpp  NlohmannJson.hpp  PicoJson.hpp
include/misc/: MemoryBuffer.hpp  MemoryStream.hpp
include/objects/: Color.hpp  FlaggedTile.hpp  ProjectData.hpp  ProjectFolder.hpp  ProjectPropertyTypes.hpp  Property.hpp  PropertyCollection.hpp  Rect.hpp  TileObject.hpp  Vector2.hpp  WorldMapData.hpp
include/tiled/: Animation.hpp  Chunk.hpp  Frame.hpp  Grid.hpp  Layer.hpp  Map.hpp  Object.hpp  Project.hpp  Terrain.hpp  Text.hpp  Tile.hpp  TiledClass.hpp  TiledEnum.hpp  Tileset.hpp  Transformations.hpp  WangColor.hpp  WangSet.hpp  WangTile.hpp  World.hpp
single_include/: tileson.hpp  tileson_min.hpp
src/: Tileson.cpp  Tileson.h  TilesonParser.cpp  TilesonParser.h
src/misc/: MemoryBuffer.cpp  MemoryBuffer.h  MemoryStream.cpp  MemoryStream.h
src/objects/: Color.cpp  Color.h  Color.hpp  Property.cpp  Property.h  PropertyCollection.cpp  PropertyCollection.h  Vector2.hpp
src/tiled/: Chunk.cpp  Chunk.h  Frame.cpp  Frame.h  Grid.cpp  Grid.h  Layer.cpp  Layer.h  Map.cpp  Map.h  Object.cpp  Object.h  ObjectTemplate.cpp  ObjectTemplate.h  Terrain.cpp  Terrain.h  Text.hpp  Tile.cpp  Tile.h  Tileset.cpp  Tileset.h  WangColor.cpp  WangColor.h  WangSet.cpp  WangSet.h  WangTile.cpp  WangTile.h
tests/: CMakeLists.txt  IJsonFakes.hpp  TestEnums.h  TestTools.hpp  tests_animation.cpp  tests_benchmarks.cpp  tests_compression_or_encoding.cpp  tests_enums.cpp  tests_enums_and_classes.cpp  tests_flipped_tile.cpp  tests_generate_missing_tiles.cpp  tests_image_collection_tileset.cpp  tests_interfaces.cpp  tests_main.cpp  tests_objects.cpp  tests_projects_and_worlds.cpp  tests_reported_issues.cpp  tests_single_header.cpp  tests_tiled.cpp  tests_tiled_gason.cpp  tests_tiled_json11.cpp  tests_tiled_nlohmann.cpp  tests_tiled_picojson.cpp  tson_files.h  tson_files_mapper.h  tson_files_mapper.h.old
tools/: amalgamate  amalgamate_min_script.bat  amalgamate_min_script.sh  amalgamate_osx.sh  amalgamate_script.bat  amalgamate_script.sh  pocketlzma  pocketlzma_script.sh
(+208 files in other folders)
